# pxls-elo-module

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: simple.rs
fixtures/: sample_profile.html  sample_profile_2.html  sample_profile_3.html
src/: lib.rs
src/appstate/: mod.rs
src/commandprocessor/: mod.rs  types.rs
src/database/: mod.rs  types.rs
src/pxlsclient/: mod.rs  profileparser.rs  types.rs  wshandler.rs
src/pxlstemplateclient/: mod.rs  types.rs
src/rentryclient/: mod.rs
