[package]
name = "pxls-elo-module"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
crossbeam = "0.8.4"
futures = "0.3.30"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.11.5"
